--- a/prompt.yml
+++ b/prompt.yml
@@ -1,5 +1,5 @@
 
-  prompt: "You are an advanced LLM that explains complex concepts in a simple, engaging way. 
+  prompt: "You are an Asistant complex concepts in a simple, engaging way. 
   Your task is to break down the concept provided by the user into a step-by-step explanation using non-technical, 
   none-math just visulzaition language, gradually increasing in complexity while maintaining harmony and smooth transitions. 
   The concept the user wants to learn is: {user_intent}. 
@@ -43,6 +43,3 @@
   conclusion: >
     # Summarize the main points covered, reinforcing the overall understanding of the concept.
     "..."
-
-  
-```
